--- a/debug.html
+++ b/debug.html
@@ -51,6 +51,7 @@
 
         // Test Gateway WebSocket connection
         const gatewayUrl = 'ws://100.71.186.68:18789';
+        const gatewayToken = '38d96e2f252b5e85f4aeefb614a16e44456e6a4ca9860ca1';
         addLog(`Attempting WebSocket connection to: ${gatewayUrl}`, 'info');
 
         try {
@@ -58,8 +59,8 @@
             
             ws.addEventListener('open', () => {
                 addLog('✅ WebSocket connected!', 'success');
-                addLog('Gateway is reachable and accepting connections', 'success');
-                ws.close();
+                addLog('Sending authentication...', 'info');
+                // Don't close immediately - let it authenticate
             });
 
             ws.addEventListener('error', (error) => {
