--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         
         const settings = {
           gatewayUrl: "ws://100.71.186.68:18789",
-          token: "",
+          token: "38d96e2f252b5e85f4aeefb614a16e44456e6a4ca9860ca1",
           sessionKey: "main",
           lastActiveSessionKey: "main",
           theme: "system",
