fix: resolve blank dashboard - esbuild decorator config + inline script crash
Two root causes for the blank dashboard page:

1. Vite 7.x/esbuild uses TC39 stage 3 decorators by default, but Lit's
   @customElement and @state decorators require legacy/experimental
   decorators. Added esbuild tsconfigRaw config to enable
   experimentalDecorators and disable useDefineForClassFields.

2. The inline <script> in index.html that pre-configures localStorage
   settings crashed because debugLog() called createDebugOverlay()
   which does document.body.appendChild() — but the script runs in
   <head> where document.body is null. This prevented localStorage
   from being set, so loadSettings() fell back to the default gateway
   URL (ws://host:5173 instead of ws://host:18789).

Fixes: decorator error, gateway URL, debug overlay null safety.

--- a/index.html
+++ b/index.html
@@ -32,16 +32,21 @@
     <script>
       // Debug logger
       window.debugLog = function(msg, type = 'info') {
-        const overlay = document.getElementById('debug-overlay') || createDebugOverlay();
-        const div = document.createElement('div');
-        div.className = `log ${type}`;
-        div.textContent = `[${new Date().toISOString().slice(11, 23)}] ${msg}`;
-        overlay.appendChild(div);
-        overlay.scrollTop = overlay.scrollHeight;
+        try {
+          const overlay = document.getElementById('debug-overlay') || createDebugOverlay();
+          if (overlay) {
+            const div = document.createElement('div');
+            div.className = `log ${type}`;
+            div.textContent = `[${new Date().toISOString().slice(11, 23)}] ${msg}`;
+            overlay.appendChild(div);
+            overlay.scrollTop = overlay.scrollHeight;
+          }
+        } catch {}
         console.log(`[DEBUG] ${msg}`);
       };
       
       function createDebugOverlay() {
+        if (!document.body) return null;
         const overlay = document.createElement('div');
         overlay.id = 'debug-overlay';
         document.body.appendChild(overlay);
